Archive2/f1/dedb09078efda0/output
main.cpp:9:9: warning: control reaches end of non-void function [-Wreturn-type]
        }
        ^
main.cpp:16:13: error: 'foo' does not refer to a value
    int x = foo.*test(); // Doesn't work, test was never initialized -- I get it
            ^
main.cpp:5:12: note: declared here
    struct foo {
           ^
main.cpp:16:22: error: called object type 'int (foo::*)()' is not a function or function pointer
    int x = foo.*test(); // Doesn't work, test was never initialized -- I get it
                 ~~~~^
1 warning and 2 errors generated.
